--- a/docs/style.css
+++ b/docs/style.css
@@ -65,7 +65,7 @@ footer{
 }
 
 
-header#page-header{
+header#page-header {
 	position: fixed;
 	width: 100%;
 	left: 0;
@@ -73,16 +73,23 @@ header#page-header{
 	z-index:9999;
 }
 
+header#page-header #print{
+  cursor: pointer;
+}
+
 header#page-header #language-selection{
-	position:absolute;
-	/* right:0; */
 	display: flex;
 	list-style: none;
 	padding: 1vh;
 	background-color:#fafafa;
-	justify-content: space-around;
 	width:100vw;
+	overflow-x: scroll;
+}
 
+header#page-header #language-selection li{
+	flex: 1 0 auto;
+	margin: 0 1em;
+	text-align: center;
 }
 
 #cheat-sheet{
@@ -180,9 +187,6 @@ div.column section ul{
 	 }
 
 	 header#page-header #language-selection{
-	 	position:relative;
-	 	left:0;
-	 	width:100%;
 		font-size: 0.75em;
 	 }
 
